# TopCL

./: .gitignore  README.md
top88/: CMakeLists.txt
top88/res/kernels/: calculate_c.cl  calculate_ce.cl  calculate_change.cl  calculate_dc.cl  calculate_edofMat.cl  calculate_edofVec.cl  calculate_ke.cl  calculate_sK.cl  calculate_xnew.cl  crazyLoop.cl  crazyLoop_unrolled1.cl  filter2.cl  ker.cl  matrix_matrix_add.cl  row_sum.cl  scalar_matrix_mult.cl  xPhys_sum.cl
top88/src/: Env.cpp  Env.h  Kernel.cpp  Kernel.h  Matrix.cpp  Matrix.h  MemBuffer.cpp  MemBuffer.h  Queue.cpp  Queue.h  cl operations.cpp  cl operations.h  main.cpp
